# patterns-of-modern-apps

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-backend  Dockerfile-simulator  Dockerfile-web  Makefile  README.md  docker-compose-all.yml  docker-compose-dockerhub.yml  docker-compose.yml  fly-backend.toml  fly-simulator.toml  fly-web.toml  fly.toml  template.yaml
.github/workflows/: build-simulator.yaml  ci.yaml
.sqlx/: query-059623b974140c8443233b0dde2802c71ab01026b938688ab72f21a445c96d95.json  query-a432d7d44c0f6eb06de7a458d3b65c187aff16636455e527abc20d53937ea20e.json  query-cc4e3a55200606871d9e55620722ead76cc990b06741f1e4fc5c60bf122e274e.json  query-d227b80e6cd3247aec26785239c5d7325a45239617cf5de8c3725175dc1e600b.json
azure-container-apps/: identity.tf  main.tf  variables.tf
ecs-fargate/: cdk.json  package-lock.json  package.json
ecs-fargate/lib/: ecs-fargate-stack.ts  instrumented_service.ts  web_service.ts
google-cloud-run/: main.tf  provider.tf  secrets.tf  variables.tf
integration-tests/: Cargo.toml
integration-tests/tests/: integration_test.rs
scaleway/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
scripts/: target.sh
src/adapters/: Cargo.toml
src/adapters/src/: adapters.rs  lib.rs  observability.rs
src/backend/: Cargo.toml  client.properties
src/backend-lambda/: Cargo.toml
src/backend-lambda/src/: main.rs
src/backend-lambda/src/adapters/: mod.rs
src/backend/src/: main.rs  utils.rs
src/backend/src/adapters/: kafka.rs  kafka_adapter.rs  lambda_adapter.rs  mod.rs  order_confirmed_event_adapter.rs
src/backend/src/ports/: mod.rs  order_confirmed.rs
src/cloudflare/: Cargo.toml  wrangler.toml
src/cloudflare/migrations/: schema.sql
src/cloudflare/src/: adapters.rs  lib.rs
src/core/: Cargo.toml
src/core/.sqlx/: query-4762678ef9da4690bac62c648b29886da992aec5a3f7200f91a2bbbec814b356.json
src/core/migrations/: 20241014152248_InitialCreate.sql  20241014155105_LoyaltyTransactions.sql
src/core/src/: adapters.rs  lib.rs  loyalty.rs  observability.rs  order_confirmed.rs  retrieve_loyalty_account.rs  spend_loyalty_points.rs
src/simulator/: Cargo.toml
src/simulator/src/: main.rs
src/web/: Cargo.toml
src/web/src/: kafka.rs  main.rs
