[workspace]
resolver = "2"
members = [
  "src/web",
  "src/core",
  "src/backend",
  "src/simulator"
]

[workspace.dependencies]
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = "1.0"
serde_json = "1.0"
tracing-subscriber = {version = "0.3.8", features = ["env-filter", "json"]}
tracing = "0.1.40"