[workspace]
resolver = "2"
members = [
  "src/core",
  "src/adapters",

  "src/web",
  "src/backend",
  "src/backend-lambda",
  "src/cloudflare",

  "src/simulator",
  "integration-tests",
]

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }

futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.8", features = [
  "env-filter",
  "json",
  "registry",
  "std",
] }
tracing = "0.1.40"
