[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dev-dependencies]
mockall = "0.13.0"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.8"
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies.rdkafka]
version     = "~0.36"
features    = ["ssl-vendored", "gssapi-vendored"]

[dev-dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
]