[package]
name = "loyalty-backend-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
loyalty_core = { path = "../core" }

futures = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.83"
chrono = "0.4.38"
lambda_runtime = {version = "0"}
aws_lambda_events = {version = "0"}
base64 = {version = "0.22"}
opentelemetry_sdk = { version = "^0.23.0", default-features = false, features = [
    "rt-tokio",
    "trace",
] }