[package]
name = "loyalty-backend-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
loyalty_core = { path = "../core" }

serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
async-trait = "0.1.83"
lambda_runtime = {version = "0.13.0"}
aws_lambda_events = {version = "0.15.1"}
base64 = {version = "0.22"}