[package]
name = "loyalty-backend"
version = "0.1.0"
edition = "2021"
[dependencies]
loyalty_core = { path = "../core" }
axum = "0.7.7"
futures = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.83"
chrono = "0.4.38"
opentelemetry_sdk = { version = "^0.23.0", default-features = false, features = [
    "rt-tokio",
    "trace",
] }

[dependencies.rdkafka]
version     = "0.36.2"
default-features = false
features    = ["tokio", "ssl-vendored"]
