[package]
name = "loyalty-backend"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
loyalty_core = { path = "../core" }
loyalty_adapters = { path = "../adapters" }

anyhow = { workspace = true }
axum = "0.7.7"
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}

[dependencies.rdkafka]
version     = "0.36.2"
default-features = false
features    = ["tokio", "ssl"]
