[package]
name = "loyalty_core"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.83"
chrono = {version = "0.4.38", features = ["serde"]}
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "migrate",
    "time",
    "chrono",
] }
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23", features = ["trace"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
opentelemetry-stdout = "0.4.0"
opentelemetry-semantic-conventions = "0.25"
tracing-opentelemetry = "0.24.0"
