[package]
name = "loyalty_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
mocks = ["dep:mockall"]

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "migrate",
    "time",
    "chrono",
] }
opentelemetry = { version = "^0.23.0", default-features = false, features = [
    "trace",
] }
opentelemetry-http = "^0.13.0"
opentelemetry-otlp = { version = "^0.16.0", features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry_sdk = { version = "^0.23.0", default-features = false, features = [
    "rt-tokio",
    "trace",
] }
opentelemetry-semantic-conventions = "^0.25.0"
opentelemetry-datadog = "^0.11.0"
tracing-opentelemetry = "^0.24.0"
reqwest = "0.11.24"
tracing-bunyan-formatter = "0.3.9"
mockall = { version = "0.13", optional = true }

[dev-dependencies]
mockall = "0.13"
