[package]
name = "loyalty_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
mocks = ["dep:mockall"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true

async-trait = "0.1.83"
mockall = { version = "0.13", optional = true }

[dev-dependencies]
mockall = "0.13"
tokio = { workspace = true }
