[package]
name = "order-confirmed-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.83"
chrono = "0.4.38"

[dependencies.rdkafka]
version     = "~0.36"
features    = ["ssl-vendored", "gssapi-vendored"]