[package]
name = "order-confirmed-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
] }
axum = "0.7.7"

[dependencies.rdkafka]
version     = "0.36.2"
default-features = false
features    = ["tokio", "ssl"]