[package]
name = "loyalty-web"
version = "0.1.0"
edition = "2021"

[dependencies]
loyalty_core = { path = "../core" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
axum = "0.7.7"
axum-tracing-opentelemetry = "0.21.1"
opentelemetry = { version = "^0.23.0", default-features = false, features = ["trace"]}