[package]
name = "loyalty-web"
version = "0.1.0"
edition = "2021"

[dependencies]
loyalty_core = { path = "../core" }

anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
axum = "0.7.7"
lambda_runtime = "0.13.0"
lambda_http = "0.13.0"
axum-tracing-opentelemetry = "0.21.1"
opentelemetry = { version = "^0.23.0", default-features = false, features = ["trace"]}